--- a/index.html
+++ b/index.html
@@ -24,8 +24,73 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <!-- HEADER -->
+  <header>
+    <div class="container">
+      <figure>
+        <a href="#"><img src="img\unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
+    <!-- NAV -->
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target=_blank>About</a></li>
+        </ul>
+      </nav>
+    </div> <!-- .container for header -->
+  </header>
+
+  <!-- MAIN -->
+  <main>
+
+  <!-- SECTION -->
+    <section class="hero-area">
+      <div class="container">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div> <!-- .container for section -->
+      <div class="hero-img">
+        <img src="img/jake-melara-30679-unsplash.jpg" alt="woman on bridge">
+      </div> <!-- .hero-img-->
+    </section> <!-- .hero-area-->
+
+    <!-- ASIDE -->
+    <aside>
+      <div class="container"> 
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div> <!-- .form-description -->
+
+        <div class="form">
+          <h3>Find out more</h3>   
+        </div> <!-- .form -->
+      </div> <!-- .container for aside -->
+    </aside>
+
+  </main>
+
+  <!-- FOOTER-->
+  <footer>
+    <div class="container">
+      <div class="footer-content">
+        <h4>Contact</h4>
+        <address class="contact">
+          <p>555-555-5555</p>
+          <email>hello@unplugged.com</email>
+        </address>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com" target="_blank"">facebook</a></p>
+            <p><a href="https://www.twitter.com" target="_blank"">twitter</a></p>
+            <p><a href="https://www.instagram.com" target="_blank"">insta</a></p>
+          </div> <!-- .social-icons -->
+        </div> <!-- .social -->
+        <h5>Copyright 2019 | Unplugged</h5>
+      </div> <!-- .footer-content -->
+    </div> <!-- .container for FOOTER-->
+  </footer>
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
