Added more content and structure

--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 
   <!-- HEADER -->
   <header>
-    <div class="container">
-      <figure>
+    <div class="content-wrapper">
         <a href="#"><img src="img\unpluggedlogo.png" alt="unplugged logo"></a>
-      </figure>
+        <div class="header-divider"></div>
     <!-- NAV -->
       <nav>
         <ul>
@@ -37,7 +36,7 @@
           <li><a href="about/index.html" target=_blank>About</a></li>
         </ul>
       </nav>
-    </div> <!-- .container for header -->
+    </div> <!-- .content-wrapper for header -->
   </header>
 
   <!-- MAIN -->
@@ -45,9 +44,9 @@
 
   <!-- SECTION -->
     <section class="hero-area">
-      <div class="container">
+      <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
-      </div> <!-- .container for section -->
+      </div> <!-- .content-wrapper for section -->
       <div class="hero-img">
         <img src="img/jake-melara-30679-unsplash.jpg" alt="woman on bridge">
       </div> <!-- .hero-img-->
@@ -55,26 +54,28 @@
 
     <!-- ASIDE -->
     <aside>
-      <div class="container"> 
+      <div class="content-wrapper"> 
         <div class="form-description">
           <h3>Want to join the next retreat?</h3>
           <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
         </div> <!-- .form-description -->
 
         <div class="form">
-          <h3>Find out more</h3>   
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">   
         </div> <!-- .form -->
-      </div> <!-- .container for aside -->
+      </div> <!-- .content-wrapper for aside -->
     </aside>
 
   </main>
 
   <!-- FOOTER-->
   <footer>
-    <div class="container">
+    <div class="content-wrapper">
       <div class="footer-content">
-        <h4>Contact</h4>
         <address class="contact">
+          <h4>Contact</h4>
           <p>555-555-5555</p>
           <email>hello@unplugged.com</email>
         </address>
@@ -86,9 +87,11 @@
             <p><a href="https://www.instagram.com" target="_blank"">insta</a></p>
           </div> <!-- .social-icons -->
         </div> <!-- .social -->
-        <h5>Copyright 2019 | Unplugged</h5>
       </div> <!-- .footer-content -->
-    </div> <!-- .container for FOOTER-->
+    </div> <!-- .content-wrapper for FOOTER-->
+    <div class="copyright">
+      <h5>Copyright 2019 | Unplugged</h5>
+    </div> <!-- .copyright -->
   </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
