Added more content

--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
       </div> <!-- .content-wrapper for aside -->
     </aside>
 
+    <section class="features">
+      <div class="content-wrapper">
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        </article>
+      </div> <!-- .content-wrapper for features section -->
+
+    </section> <!-- .features -->
+
   </main>
 
   <!-- FOOTER-->
