Added more content and structure

--- a/index.html
+++ b/index.html
@@ -70,13 +70,50 @@
 
     <section class="features">
       <div class="content-wrapper">
-        <article>
+        <article class="features-items">
           <p class="fontawesome-icon"></p>
           <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        </article>
+        <article class="features-items">
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        </article>
+        <article class="features-items">
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Private chef teams providing on demand meals - just like your team kitchen.</p>
+        </article>
+        <article class="features-items">
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+        </article>
+        <article class="features-items">
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
+        </article>
+        <article class="features-items">
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
         </article>
       </div> <!-- .content-wrapper for features section -->
 
     </section> <!-- .features -->
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <div>
+          <h2>Be a better team in 5 days, like these.</h2>
+        </div>
+        <div>
+          <article>
+            <img>
+            <div>
+              <h3>LaCrue Bottling Co. October 2018</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. </p>
+          </article>
+        </div>
+      </div> <!-- .content-wrapper for reviews section -->
+    </section> <!-- .reviews -->
 
   </main>
 
