Added features content

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 
     <section class="features">
       <div class="content-wrapper">
+        <div>
+          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        </div>
         <article class="features-items">
           <p class="fontawesome-icon"></p>
           <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
