Adding content to about and FAQ pages

--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
   <!-- HEADER -->
   <header>
     <div class="content-wrapper">
-        <a href="#"><img src="img\unpluggedlogo.png" alt="unplugged logo"></a>
+        <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
         <div class="header-divider"></div>
     <!-- NAV -->
       <nav>
@@ -38,6 +38,22 @@
       </nav>
     </div> <!-- .content-wrapper for header -->
   </header>
+
+  <main>
+      <section class="mission">
+        <div class="content-wrapper">
+          <div class="mission-content">
+
+          </div> <!-- .mission-content -->
+        </div> <!-- .content-wrapper for mission section -->
+      </section>
+
+
+      <section class="general-info">
+
+      </section>
+
+  </main>
 
   <!-- FOOTER-->
   <footer>
