Added content and structure for about page

--- a/about/index.html
+++ b/about/index.html
@@ -43,9 +43,36 @@
       <section class="mission">
         <div class="content-wrapper">
           <div class="mission-content">
-
+            <h1>Our Mission - we want to make you the team you always wanted to be.
+            </h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc sed blandit libero volutpat sed cras ornare arcu dui. Sit amet consectetur adipiscing elit duis tristique sollicitudin nibh sit. Malesuada pellentesque elit eget gravida cum sociis natoque penatibus et. Praesent tristique magna sit amet purus gravida.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc sed blandit libero volutpat sed cras ornare arcu dui. Sit amet consectetur adipiscing elit duis tristique sollicitudin nibh sit. Malesuada pellentesque elit eget gravida cum sociis natoque penatibus et. Praesent tristique magna sit amet purus gravida.</p>
           </div> <!-- .mission-content -->
         </div> <!-- .content-wrapper for mission section -->
+      </section>
+      <section class="map">
+        <div class="content-wrapper">
+          <figure></figure>
+        </div>
+      </section>
+      <section class="contact-section">
+        <div class="content-wrapper">
+          <h1>Contact us, because you all need this.</h1>
+          <div class="general-information">
+            <h3>General information</h3>
+            <address>
+              <p>333 Main St. Lake Geneva, WI 53147</p>
+              <p>555-555-5555</p>
+              <p>hello@unplugged.com</p>
+            </address>
+          </div> <!-- .general-information -->
+        
+          <div class="chat">
+            <h3>Chat with a Facilitator</h3>
+            <p>555-555-5555</p>
+            <p>facilitator@unplugged.com</p>
+          </div> <!-- .chat -->
+        </div> <!-- .content-wrapper for contact-section -->
       </section>
 
 
