Added structure and content to FAQ page

--- a/faq/index.html
+++ b/faq/index.html
@@ -38,6 +38,28 @@
         </nav>
       </div> <!-- .content-wrapper for header -->
     </header>
+
+    <main>
+      <section class="faq">
+        <h1>Frequently Asked Questions</h1>
+        <div class="faq-1">
+          <h3>How do I get to the Unplugged retreat?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Eu consequat ac felis donec et. Tellus mauris a diam maecenas sed enim. Donec ac odio tempor orci.</p>
+        </div>
+        <div class="faq-2">
+          <h3>What kind of team is right for the Unplugged retreat?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Eu consequat ac felis donec et. Tellus mauris a diam maecenas sed enim. Donec ac odio tempor orci.</p>
+        </div>
+        <div class="faq-3">
+          <h3>What size teams can you accomodate?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Eu consequat ac felis donec et. Tellus mauris a diam maecenas sed enim. Donec ac odio tempor orci.</p>
+        </div>
+        <div class="faq-4">
+          <h3>Is there really no wifi at all?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Eu consequat ac felis donec et. Tellus mauris a diam maecenas sed enim. Donec ac odio tempor orci.</p>
+        </div>
+      </section> <!-- .faq -->
+    </main>
   
     <!-- FOOTER-->
     <footer>
