Added layout css and mobile

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>Retreat from the desk, return refreshed.</h1>
       </div> <!-- .content-wrapper for section -->
       <div class="hero-img">
-        <img src="img/jake-melara-30679-unsplash.jpg" alt="woman on bridge">
+        <img src="#" alt="woman on bridge">
       </div> <!-- .hero-img-->
     </section> <!-- .hero-area-->
 
