--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
       </div> <!-- .content-wrapper for section -->
-      <div class="hero-img">
-        <img src="#" alt="woman on bridge">
-      </div> <!-- .hero-img-->
     </section> <!-- .hero-area-->
 
     <!-- ASIDE -->
@@ -57,12 +54,13 @@
       <div class="content-wrapper"> 
         <div class="form-description">
           <h3>Want to join the next retreat?</h3>
-          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
+          </p>
         </div> <!-- .form-description -->
-
         <div class="form">
           <h3>Find out more</h3>
-          <input type="text" name="name" value="email address">
+          <input type="text" name="name" value="name@email.com">
           <input type="button" value="Download Itinerary">   
         </div> <!-- .form -->
       </div> <!-- .content-wrapper for aside -->
@@ -70,49 +68,63 @@
 
     <section class="features">
       <div class="content-wrapper">
-        <div>
           <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-        </div>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Private chef teams providing on demand meals - just like your team kitchen.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
-        </article>
-        <article class="features-items">
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-        </article>
+]         <div class="features-items">
+            <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Private chef teams providing on demand meals - just like your team kitchen.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              5 outdoor obstacle courses, including private beach 1/2 mile from bungalow
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Retreat facilitator to manage your day to day activities so you all get a chance to rest.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Dedicated computer room for times that you must wifi.
+            </p>
+          </article>
+        </div> <!-- .features-item -->
       </div> <!-- .content-wrapper for features section -->
-
     </section> <!-- .features -->
 
     <section class="reviews">
       <div class="content-wrapper">
-        <div>
-          <h2>Be a better team in 5 days, like these.</h2>
-        </div>
-        <div>
-          <article>
-            <img>
-            <div>
-              <h3>LaCrue Bottling Co. October 2018</h3>
-            </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. </p>
+        <h2>Be a better team in 5 days, like these.</h2>
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. 
+            </p>
+          </div>
           </article>
         </div>
       </div> <!-- .content-wrapper for reviews section -->
@@ -126,21 +138,31 @@
       <div class="footer-content">
         <address class="contact">
           <h4>Contact</h4>
-          <p>555-555-5555</p>
-          <email>hello@unplugged.com</email>
+          <p>
+            555-555-5555
+            hello@unplugged.com
+          </p>
         </address>
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com" target="_blank"">facebook</a></p>
-            <p><a href="https://www.twitter.com" target="_blank"">twitter</a></p>
-            <p><a href="https://www.instagram.com" target="_blank"">insta</a></p>
+            <p>
+              <a href="https://www.facebook.com" target="_blank""></a>
+            </p>
+            <p>
+              <a href="https://www.twitter.com" target="_blank""></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com" target="_blank""></a>
+            </p>
           </div> <!-- .social-icons -->
         </div> <!-- .social -->
       </div> <!-- .footer-content -->
     </div> <!-- .content-wrapper for FOOTER-->
     <div class="copyright">
-      <h5>Copyright 2019 | Unplugged</h5>
+      <p>
+        Copyright 2019 | Unplugged
+      </p>
     </div> <!-- .copyright -->
   </footer>
 
