--- a/faq/index.html
+++ b/faq/index.html
@@ -27,7 +27,9 @@
     <!-- HEADER -->
     <header>
       <div class="content-wrapper">
-          <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+          <a href="#">
+            <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+          </a>
           <div class="header-divider"></div>
       <!-- NAV -->
         <nav>
@@ -40,6 +42,7 @@
     </header>
 
     <main>
+      
       <section class="faq">
         <div class="content-wrapper">
         <h1>Frequently Asked Questions</h1>
