Fixed CSS and HTML structure

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="features">
       <div class="content-wrapper">
           <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-]         <div class="features-items">
+          <div class="features-items">
             <article>
             <p class="fontawesome-icon">
             </p>
@@ -139,7 +139,7 @@
         <address class="contact">
           <h4>Contact</h4>
           <p>
-            555-555-5555
+            555-555-5555<br>
             hello@unplugged.com
           </p>
         </address>
