Added about page tablet breakpoint

--- a/about/index.html
+++ b/about/index.html
@@ -55,9 +55,9 @@
           <figure></figure>
         </div>
       </section>
-      <section class="contact-section">
+      <section class="contact-content">
         <div class="content-wrapper">
-          <h1>Contact us, because you all need this.</h1>
+          <h2>Contact us, because you all need this.</h2>
           <div class="general-information">
             <h3>General information</h3>
             <address>
